<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_keyboard"
        android:icon="@drawable/keyboard_icon"
        android:title="@string/doorMessage"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_parfume"
        android:icon="@drawable/parfume_icon"
        android:title="@string/roomParfume"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_locked"
        android:icon="@drawable/locked_icon"
        android:title="@string/homeLock"
        app:showAsAction="always"/>

    <item android:id="@+id/action_tasks"
        android:title="@string/tasks"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/action_profile_options"
        android:title="@string/profile_options"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />
</menu>