<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Cihaz"
            android:id="@+id/textView20" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Saat:"
            android:id="@+id/textView21" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/etTime" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Süre:"
            android:id="@+id/textView22" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/etProcess" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rgPeriod"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Period"
                android:id="@+id/textView" />

            <RadioButton android:id="@+id/radio_always"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/always"
                />

            <RadioButton android:id="@+id/radio_weekdays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekdays"
                />

            <RadioButton android:id="@+id/radio_weekends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekends"
                />


        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rgStatus">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Status"
                android:id="@+id/textView8" />

            <RadioButton android:id="@+id/radio_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on"
                />

            <RadioButton android:id="@+id/radio_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off"
                />


        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/etNote" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="100">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gönder"
            android:id="@+id/btnSend"
            android:layout_weight="50"
            android:background="@drawable/btn_positive"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="İptal"
            android:id="@+id/btn_cancel"
            android:layout_weight="50"
            android:background="@drawable/btn_negative"
            />
    </LinearLayout>

</LinearLayout>
